# eosterm

./: README.md  config.example  pyproject.toml
src/eosterm/: __init__.py  app.py  cli.py  engine.sh
src/tuimux/: __init__.py  app.py  cli.py  engine.sh
tests/: test_tuimux.py
