[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eosterm"
version = "0.1.0"
description = "A terminal dashboard to open, reach, and keep-awake tmux sessions across your Tailscale tailnet."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Ersilia Open Source Initiative" }]
keywords = ["tmux", "tailscale", "ssh", "terminal", "tui", "textual"]
dependencies = ["textual>=1.0"]

[project.scripts]
eosterm = "eosterm.cli:main"

[project.urls]
Homepage = "https://github.com/ersilia-os/eosterm"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eosterm = ["engine.sh"]
